--- a/index.html
+++ b/index.html
@@ -255,16 +255,16 @@
 <body>
     <header>
         <img src="logo.jpg" alt="Logo">
-        <span>MURDER SIGNALS HACK v.3.0</span>
+        <span>MURDER SIGNALS HACK</span>
     </header>
     <canvas id="particleCanvas" width="1920" height="932"></canvas> <!-- Добавленный элемент canvas -->
     <div>
         <select id="fieldSelect" style="width: 326px;">
-            <option value="6x15">Поле 6x15</option>
-            <option value="3x6">Поле 3x6</option>
-            <option value="2x3">Поле 2x3</option>
-            <option value="4x9">Поле 4x9</option>
-            <option value="5x12">Поле 5x12</option>
+            <option value="6x15">Field 6x15</option>
+            <option value="3x6">Field 3x6</option>
+            <option value="2x3">Field 2x3</option>
+            <option value="4x9">Field 4x9</option>
+            <option value="5x12">Field 5x12</option>
         </select>
     </div>
     <div class="game-board" id="gameBoard" style="width: 325.5px;"><div class="row"><div class="square" style="width: 52px; height: 52px;"><div class="neon-circle"></div></div><div class="square" style="width: 52px; height: 52px;"><div class="neon-circle"></div></div><div class="square" style="width: 52px; height: 52px;"><div class="neon-circle"></div></div><div class="square" style="width: 52px; height: 52px;"><div class="neon-circle"></div></div><div class="square" style="width: 52px; height: 52px;"><div class="neon-circle"></div></div><div class="square" style="width: 52px; height: 52px;"><div class="neon-circle"></div></div></div><div class="row"><div class="square" style="width: 52px; height: 52px;"><div class="neon-circle"></div></div><div class="square" style="width: 52px; height: 52px;"><div class="neon-circle"></div></div><div class="square" style="width: 52px; height: 52px;"><div class="neon-circle"></div></div><div class="square" style="width: 52px; height: 52px;"><div class="neon-circle"></div></div><div class="square" style="width: 52px; height: 52px;"><div class="neon-circle"></div></div><div class="square" style="width: 52px; height: 52px;"><div class="neon-circle"></div></div></div><div class="row"><div class="square" style="width: 52px; height: 52px;"><div class="neon-circle"></div></div><div class="square" style="width: 52px; height: 52px;"><div class="neon-circle"></div></div><div class="square" style="width: 52px; height: 52px;"><div class="neon-circle"></div></div><div class="square" style="width: 52px; height: 52px;"><div class="neon-circle"></div></div><div class="square" style="width: 52px; height: 52px;"><div class="neon-circle"></div></div><div class="square" style="width: 52px; height: 52px;"><div class="neon-circle"></div></div></div><div class="row"><div class="square" style="width: 52px; height: 52px;"><div class="neon-circle"></div></div><div class="square" style="width: 52px; height: 52px;"><div class="neon-circle"></div></div><div class="square" style="width: 52px; height: 52px;"><div class="neon-circle"></div></div><div class="square" style="width: 52px; height: 52px;"><div class="neon-circle"></div></div><div class="square" style="width: 52px; height: 52px;"><div class="neon-circle"></div></div><div class="square" style="width: 52px; height: 52px;"><div class="neon-circle"></div></div></div><div class="row"><div class="square" style="width: 52px; height: 52px;"><div class="neon-circle"></div></div><div class="square" style="width: 52px; height: 52px;"><div class="neon-circle"></div></div><div class="square" style="width: 52px; height: 52px;"><div class="neon-circle"></div></div><div class="square" style="width: 52px; height: 52px;"><div class="neon-circle"></div></div><div class="square" style="width: 52px; height: 52px;"><div class="neon-circle"></div></div><div class="square" style="width: 52px; height: 52px;"><div class="neon-circle"></div></div></div></div>
@@ -395,7 +395,7 @@ document.addEventListener('DOMContentLoaded', () => {
 
     playButton.addEventListener('click', () => {
         if (dotsCount >= maxDots) {
-            alert('Игра окончена!');
+            alert('Game end!');
             return;
         }
 
